--- a/rpncalculator/Base.lproj/Main.storyboard
+++ b/rpncalculator/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +12,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="rpncalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xbV-7c-naO">
-                                <rect key="frame" x="285" y="581" width="70" height="64.5"/>
+                                <rect key="frame" x="324" y="776.66666666666663" width="70" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="67" id="WO5-wA-jKL"/>
                                     <constraint firstAttribute="width" constant="70" id="a4l-Bs-Zzm"/>
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z0e-Hw-HVH">
-                                <rect key="frame" x="20" y="579" width="70" height="66.5"/>
+                                <rect key="frame" x="20" y="774.66666666666663" width="70" height="66"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="69" id="Lb8-ID-pdf"/>
                                     <constraint firstAttribute="width" constant="70" id="sgX-bY-gzm"/>
@@ -57,7 +57,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nFi-Gg-HuG">
-                                <rect key="frame" x="129" y="581" width="70" height="64.5"/>
+                                <rect key="frame" x="129" y="776.66666666666663" width="70" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="67" id="A6L-gO-UMQ"/>
                                     <constraint firstAttribute="width" constant="70" id="ipD-MG-63N"/>
@@ -78,7 +78,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HCF-HG-jlD">
-                                <rect key="frame" x="189" y="492.5" width="166" height="65.5"/>
+                                <rect key="frame" x="228" y="688.33333333333326" width="166" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="166" id="WRU-m3-oc2"/>
                                     <constraint firstAttribute="height" constant="68" id="hDJ-yI-4ET"/>
@@ -98,7 +98,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wZa-S7-JRa">
-                                <rect key="frame" x="20" y="491" width="166" height="65.5"/>
+                                <rect key="frame" x="20" y="686.66666666666663" width="166" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="166" id="Ne6-J9-qSX"/>
                                     <constraint firstAttribute="height" constant="68" id="OnH-iK-hZZ"/>
@@ -119,7 +119,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GlU-ab-XeT">
-                                <rect key="frame" x="20" y="411" width="91" height="65.5"/>
+                                <rect key="frame" x="20" y="606.66666666666663" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="7Fb-6x-sQl"/>
                                     <constraint firstAttribute="width" constant="91" id="SeI-aB-cUd"/>
@@ -140,7 +140,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3bl-tm-1Uo">
-                                <rect key="frame" x="162" y="412" width="91" height="65.5"/>
+                                <rect key="frame" x="162" y="607.66666666666663" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="68" id="Spd-9M-bDC"/>
                                     <constraint firstAttribute="width" constant="91" id="aeP-Dc-MQI"/>
@@ -162,7 +162,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bF9-v9-WJa">
-                                <rect key="frame" x="264" y="412" width="91" height="64.5"/>
+                                <rect key="frame" x="303" y="607.66666666666663" width="91" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="67" id="5N8-wL-5bt"/>
                                     <constraint firstAttribute="width" constant="91" id="TX2-Q4-FVk"/>
@@ -183,7 +183,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qrn-14-NN5">
-                                <rect key="frame" x="20" y="318" width="91" height="65.5"/>
+                                <rect key="frame" x="20" y="513.66666666666663" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="iHY-uW-I1s"/>
                                     <constraint firstAttribute="width" constant="91" id="kzm-Tu-bv5"/>
@@ -203,7 +203,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ROb-1z-814">
-                                <rect key="frame" x="162" y="318" width="91" height="65.5"/>
+                                <rect key="frame" x="162" y="513.66666666666663" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="lE5-cd-58T"/>
                                     <constraint firstAttribute="width" constant="91" id="wqv-bF-3jp"/>
@@ -223,7 +223,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Imz-W2-UwV">
-                                <rect key="frame" x="264" y="318" width="91" height="65.5"/>
+                                <rect key="frame" x="303" y="513.66666666666663" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="68" id="OIH-lm-hQ8"/>
                                     <constraint firstAttribute="width" constant="91" id="XNv-gs-yuf"/>
@@ -244,7 +244,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T1b-oV-WVb">
-                                <rect key="frame" x="20" y="228" width="91" height="65.5"/>
+                                <rect key="frame" x="20" y="423.66666666666669" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="91" id="BmS-zy-ktR"/>
                                     <constraint firstAttribute="height" constant="68" id="FJZ-ts-ZPA"/>
@@ -264,7 +264,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dGn-MY-wcJ">
-                                <rect key="frame" x="162" y="229" width="91" height="65.5"/>
+                                <rect key="frame" x="162" y="424.66666666666669" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68.000000000000028" id="0ek-Co-rfB"/>
                                     <constraint firstAttribute="width" constant="91" id="6q5-Jl-I8k"/>
@@ -285,7 +285,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W6n-ta-hnt">
-                                <rect key="frame" x="264" y="229" width="91" height="65.5"/>
+                                <rect key="frame" x="303" y="424.66666666666669" width="91" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="wmr-c4-EBD"/>
                                     <constraint firstAttribute="width" constant="91" id="zBY-4c-ZCP"/>
@@ -305,7 +305,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lXR-uF-ybb">
-                                <rect key="frame" x="162" y="140" width="91" height="65"/>
+                                <rect key="frame" x="162" y="335.66666666666669" width="91" height="64.666666666666657"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="67.670000000000002" id="N8s-Vw-510"/>
                                     <constraint firstAttribute="width" constant="91" id="ypb-5Z-k9A"/>
@@ -325,7 +325,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZzC-VM-vn8">
-                                <rect key="frame" x="264" y="140" width="91" height="65"/>
+                                <rect key="frame" x="303" y="336" width="91" height="64.333333333333343"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="91" id="PdX-QN-Yga"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="91" id="SVP-Al-TaU"/>
@@ -347,7 +347,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ytg-37-8T4">
-                                <rect key="frame" x="324" y="4.5" width="31" height="31.5"/>
+                                <rect key="frame" x="363" y="49" width="31" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="31" id="APC-cl-FEO"/>
                                     <constraint firstAttribute="height" constant="32.329999999999998" id="eIb-FE-X9Q"/>
@@ -358,7 +358,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FWA-ng-iAH">
-                                <rect key="frame" x="224" y="580.5" width="70" height="65"/>
+                                <rect key="frame" x="224" y="776.33333333333326" width="70" height="64.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="KjL-Nm-ua0"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="cUc-tr-elB"/>
@@ -379,7 +379,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s94-gv-gCc">
-                                <rect key="frame" x="20" y="143" width="91" height="66"/>
+                                <rect key="frame" x="20" y="338.66666666666669" width="91" height="65.333333333333343"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="91" id="aac-Ji-VPN"/>
                                     <constraint firstAttribute="height" constant="68.329999999999998" id="jYP-iU-2oI"/>
